force-app/main/default/objects/Exhibition_OA_Second_Approver__c/Exhibition_OA_Second_Approver__c.object-meta.xml
<CustomObject>
    <label>OA 二级审批人</label>
    <nameField>
        <label>二级审批人</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OA 二级审批人</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>