force-app/main/default/objects/Exhibition_OA_Second_Approver__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>亚太区|Asia-Pacific</fullName>
            </value>
            <value>
                <fullName>欧洲区|Europe</fullName>
            </value>
            <value>
                <fullName>东盟区|ASEAN</fullName>
            </value>
            <value>
                <fullName>中东非-MEA Region</fullName>
            </value>
            <value>
                <fullName>欧洲-EU Region</fullName>
            </value>
            <value>
                <fullName>美洲-Americas Region</fullName>
            </value>
            <value>
                <fullName>总部-HQ</fullName>
            </value>
            <value>
                <fullName>亚太-Asia-Pacific Region</fullName>
            </value>
            <value>
                <fullName>东盟-ASEAN</fullName>
            </value>
            <value>
                <fullName>日本-Japan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>