force-app/main/default/objects/Exhibition_OA_Second_Approver__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>类型</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>部门</fullName>
            </value>
            <value>
                <fullName>总办</fullName>
            </value>
            <value>
                <fullName>大区</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>