force-app/main/default/objects/Exhibition_OA_Second_Approver__c/fields/XHNumber__c.field-meta.xml
<CustomField>
    <fullName>XHNumber__c</fullName>
    <label>信鸿号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>