force-app/main/default/objects/Exhibition_OA_Second_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>XHNumber__c</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>部门,总办,大区</value>
    </filters>
    <label>全部</label>
</ListView>